# StudioAI

./: .gitignore  README.md  pyproject.toml
.cursor/plans/: studio_ai_architecture_614125ee.plan.md
adapters/: NuGet.config  StudioAi.Adapters.sln
adapters/aicontracts/StudioAi.Contracts/: ContractDtos.cs  HostInterfaces.cs  StudioAi.Contracts.csproj
adapters/bridge/: README.md
adapters/plugin/: CONNECTIVITY.md  README.md  STAGE5B.md
adapters/plugin/StudioAi.Plugin/: StudioAi.Plugin.csproj  StudioAiChatMessage.cs  StudioAiChatWindow.cs  StudioAiCoreUnityClient.cs  StudioAiLog.cs  StudioAiPlugin.cs  StudioAiSearchJson.cs  ToolbarIconLoader.cs
adapters/worker/studio_ai_worker/: __init__.py  __main__.py  app.py  config.py  manager.py  registry.py
adapters/worker/studio_ai_worker/backends/: llamacpp.py
contracts/: openapi.yaml
core/studio_ai_core/: __init__.py  __main__.py  app.py  chat_service.py  cli.py  cli_index.py  config.py  core_ports.py  personas.py  profiles.py  routing.py  text_normalize.py  vision_gate.py  worker_client.py
core/studio_ai_core/bridge/: __init__.py
core/studio_ai_core/indexing/: __init__.py  cameras.py  pipeline.py
core/studio_ai_core/indexing/joycaption/: __init__.py  client.py  presets.py
core/studio_ai_core/indexing/merge/: __init__.py
core/studio_ai_core/indexing/posecode/: __init__.py  (+2 more)
core/studio_ai_core/scene_feedback/: __init__.py
core/studio_ai_core/static/: app.js  feedback.html  feedback.js  index.html  style.css
deploy/: config.home-server.yaml  config.main-pc.yaml  registry.yaml
deploy/grammars/: index_entry.gbnf  smoke_json.gbnf
scripts/: deploy_studioai_plugin.ps1  free-bridge-port.ps1  generate_batch_fixtures.py  setup_vision.ps1  smoke_stage1.ps1  smoke_stage1.py  smoke_stage1.sh  smoke_stage2.ps1  smoke_stage2.py  smoke_stage2.sh  smoke_stage3.ps1  smoke_stage3.py  start-core.ps1  start-core.sh  start-worker.ps1  start-worker.sh
tests/: test_bridge_discover.py  test_core_ports.py  test_merge_sanitize.py  test_model_manager.py  test_posecode_and_store.py  test_routing.py  test_scene_feedback.py  test_text_normalize.py
(+1 files in other folders)
