[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studio-ai"
version = "0.2.0"
description = "StudioAI Core + Worker – Stage 2 LLM chat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5.0"]

[project.scripts]
studio-ai-worker = "studio_ai_worker.__main__:main"
studio-ai-core = "studio_ai_core.__main__:main"
studio-ai-chat = "studio_ai_core.cli:main"

[tool.setuptools.packages.find]
where = ["core", "adapters/worker"]

[tool.setuptools.package-data]
studio_ai_core = ["static/*"]
