[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studio-ai"
version = "0.3.0"
description = "StudioAI Core + Worker – Stage 3 capture/describe/index"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5.0"]
vision = [
  # IMPORTANT: plain `pip install torch` often installs CPU-only on Windows.
  # For RTX 50xx install CUDA torch first:
  #   pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
  #   or: .\scripts\setup_vision.ps1
  "torch",
  "transformers>=4.40",
  "Pillow>=10.0",
  "accelerate",
  "bitsandbytes",
]

[project.scripts]
studio-ai-worker = "studio_ai_worker.__main__:main"
studio-ai-core = "studio_ai_core.__main__:main"
studio-ai-chat = "studio_ai_core.cli:main"
studio-ai = "studio_ai_core.cli_index:main"

[tool.setuptools.packages.find]
where = ["core", "adapters/worker"]

[tool.setuptools.package-data]
studio_ai_core = ["static/*"]
